@@ -12,6 +12,14 @@ Changes since 2.1.3
 6. src/slvideo.c: Added SLtt_is_utf8_mode.
 7. src/sltermin.c:  Added support for new ncurses hex-encoded terminfo
    directories.
+8. slsh/lib/tm/cmdopt.tm: Missing commas in the documentation for
+   cmdopt_add.  (Doug Burke).
+9. src/slarrmisc.inc: Changed inner-product code to use block arrays
+   to be more cache friendly.  Since the block size is cpu-dependent,
+   __get/set_innerprod_block_size functions have been added.  The
+   default value is controlled by a variable in src/sllimits.h.
+
+{{{ Previous Versions
 
 Changes since 2.1.2
 1. autoconf/Makefile.in: If any */Makefile.in is more recent than the
@@ -59,8 +67,6 @@ Changes since 2.1.2
     the return value of inet_addr.
 22. src/slang.c: SLang_start_arg_list made a wrapper around
     start_arg_list.
-
-{{{ Previous Versions
 
 Changes since 2.1.1
 1. slsh/lib/readascii.sl: Typo in the usage message corrected.
